Fixed the extra space

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -913,7 +913,7 @@ label {
       height: 100%;
     }
 
-    .column-lg {
+    .column-lg:has(.card) {
       display: block;
     }
     .mobile_column_sm {
